[package]
name = "astcenc-rs"
version = "0.1.1"
readme = "README.md"
homepage = "https://github.com/eira-fransham/astcenc-sys"
repository = "https://github.com/eira-fransham/astcenc-sys"
documentation = "https://docs.rs/astcenc-sys"
description = "Idiomatic Rust bindings to the official ASTC encoder library from ARM"
license = "Unlicense"
authors = ["Eira <jackefransham@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.16"
astcenc-sys = "0.1"
bitflags = "2.6"
half = "2"

[dev-dependencies]
rand = "0.8"
all_asserts = "2.3"
average = "0.15"
image = { version = "0.25", default-features = false, features = ["png"]}
show-image = { version = "0.14", features = ["image"] }
bytesize = "1.3"

# Performance is unusably bad if `astcenc-sys` is compiled with optimizations disabled
[profile.dev.package.astcenc-sys]
opt-level = 1

[profile.test.package.astcenc-sys]
opt-level = 1
