[package]
name = "astcenc-rs"
version = "0.2.0"
readme = "README.md"
homepage = "https://github.com/eira-fransham/astcenc-rs"
repository = "https://github.com/eira-fransham/astcenc-rs"
documentation = "https://docs.rs/astcenc-rs"
description = "Idiomatic Rust bindings to the official ASTC encoder library from ARM"
license = "Unlicense"
authors = ["Eira <jackefransham@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.16"
astcenc-sys = "0.2"
bitflags = "2.6"
half = "2"

[dev-dependencies]
rand = "0.9"
all_asserts = "2.3"
average = "0.16"
image = { version = "0.25", default-features = false, features = ["png"]}
bytesize = "2.3"

# Performance is unusably bad if `astcenc-sys` is compiled with optimizations disabled
[profile.dev.package.astcenc-sys]
opt-level = 1

[profile.test.package.astcenc-sys]
opt-level = 1
